2.2.0 for Minecraft 1.21.11 feat: minor `/sba` search improvement feat: log4j config for just show SBA's debug messages on dev env